Logic: refactor XYZContainsKeywordsPredicate keyword to `String` (#206)
The `find` command allows only one keyword per prefix, it does not make
sense for our predicate keywords to be a `List<String>`

Let's refactor all our XYZContainsKeywordsPredicate keyword to be
`String` and:
* cascade all changes to all affected class
* fix all broken unit tests
* remove irrelevant unit tests
* add new unit tests to ensure behaviour