@@ -12,8 +12,8 @@ import static pwe.planner.testutil.TypicalModules.FIONA;
 import static pwe.planner.testutil.TypicalModules.getTypicalModuleList;
 import static pwe.planner.testutil.TypicalRequirementCategories.getTypicalRequirementCategoriesList;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.Test;
 
@@ -46,9 +46,9 @@ public class FindCommandTest {
     @Test
     public void equals() {
         NameContainsKeywordsPredicate<Module> firstPredicate =
-                new NameContainsKeywordsPredicate<>(Collections.singletonList("first"));
+                new NameContainsKeywordsPredicate<>("first");
         NameContainsKeywordsPredicate<Module> secondPredicate =
-                new NameContainsKeywordsPredicate<>(Collections.singletonList("second"));
+                new NameContainsKeywordsPredicate<>("second");
 
         FindCommand findFirstCommand = new FindCommand(firstPredicate);
         FindCommand findSecondCommand = new FindCommand(secondPredicate);
@@ -71,9 +71,9 @@ public class FindCommandTest {
     }
 
     @Test
-    public void execute_zeroKeywords_noModuleFound() {
+    public void execute_oneKeywords_noModuleFound() {
         String expectedMessage = String.format(MESSAGE_MODULES_LISTED_OVERVIEW, 0);
-        NameContainsKeywordsPredicate<Module> predicate = prepareNamePredicate(" ");
+        NameContainsKeywordsPredicate<Module> predicate = prepareNamePredicate("doNotExist");
         FindCommand command = new FindCommand(predicate);
         expectedModel.updateFilteredModuleList(predicate);
         assertCommandSuccess(command, model, commandHistory, expectedMessage, expectedModel);
@@ -81,56 +81,56 @@ public class FindCommandTest {
     }
 
     @Test
-    public void execute_multipleNameKeywords_multipleModulesFound() {
-        String expectedMessage = String.format(MESSAGE_MODULES_LISTED_OVERVIEW, 3);
-        NameContainsKeywordsPredicate<Module> predicate = prepareNamePredicate("Kurz Elle Kunz");
+    public void execute_nameKeyword_foundModule() {
+        String expectedMessage = String.format(MESSAGE_MODULES_LISTED_OVERVIEW, 1);
+        NameContainsKeywordsPredicate<Module> predicate = prepareNamePredicate("Kurz ");
         FindCommand command = new FindCommand(predicate);
         expectedModel.updateFilteredModuleList(predicate);
         assertCommandSuccess(command, model, commandHistory, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(CARL, ELLE, FIONA), model.getFilteredModuleList());
+        assertEquals(List.of(CARL), model.getFilteredModuleList());
     }
 
     @Test
-    public void execute_multipleCodeKeywords_multipleModulesFound() {
-        String expectedMessage = String.format(MESSAGE_MODULES_LISTED_OVERVIEW, 3);
+    public void execute_codeKeyword_foundModule() {
+        String expectedMessage = String.format(MESSAGE_MODULES_LISTED_OVERVIEW, 1);
         // TODO: update the module code after TypicalModule attribute are updated
-        CodeContainsKeywordsPredicate<Module> predicate = prepareCodePredicate("CS2040C CS2101 CS2102");
+        CodeContainsKeywordsPredicate<Module> predicate = prepareCodePredicate(" CS2101 ");
         FindCommand command = new FindCommand(predicate);
         expectedModel.updateFilteredModuleList(predicate);
         assertCommandSuccess(command, model, commandHistory, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(CARL, ELLE, FIONA), model.getFilteredModuleList());
+        assertEquals(List.of(ELLE), model.getFilteredModuleList());
     }
 
     @Test
-    public void execute_multipleCreditsKeywords_multipleModulesFound() {
-        String expectedMessage = String.format(MESSAGE_MODULES_LISTED_OVERVIEW, 3);
+    public void execute_creditKeyword_foundModule() {
+        String expectedMessage = String.format(MESSAGE_MODULES_LISTED_OVERVIEW, 1);
         // TODO: update the module credits after TypicalModule attribute are updated
-        CreditsContainsKeywordsPredicate<Module> predicate = prepareCreditsPredicate("2 4 5");
+        CreditsContainsKeywordsPredicate<Module> predicate = prepareCreditsPredicate("5");
         FindCommand command = new FindCommand(predicate);
         expectedModel.updateFilteredModuleList(predicate);
         assertCommandSuccess(command, model, commandHistory, expectedMessage, expectedModel);
-        assertEquals(Arrays.asList(CARL, ELLE, FIONA), model.getFilteredModuleList());
+        assertEquals(List.of(FIONA), model.getFilteredModuleList());
     }
 
     /**
      * Parses {@code userInput} into a {@code NameContainsKeywordsPredicate}.
      */
     private NameContainsKeywordsPredicate<Module> prepareNamePredicate(String userInput) {
-        return new NameContainsKeywordsPredicate<>(Arrays.asList(userInput.split("\\s+")));
+        return new NameContainsKeywordsPredicate<>(userInput);
     }
 
     /**
      * Parses {@code userInput} into a {@code CodeContainsKeywordsPredicate}.
      */
     private CodeContainsKeywordsPredicate<Module> prepareCodePredicate(String userInput) {
-        return new CodeContainsKeywordsPredicate<>(Arrays.asList(userInput.split("\\s+")));
+        return new CodeContainsKeywordsPredicate<>(userInput);
     }
 
     /**
      * Parses {@code userInput} into a {@code CreditsContainsKeywordsPredicate}.
      */
     private CreditsContainsKeywordsPredicate<Module> prepareCreditsPredicate(String userInput) {
-        return new CreditsContainsKeywordsPredicate<>(Arrays.asList(userInput.split("\\s+")));
+        return new CreditsContainsKeywordsPredicate<>(userInput);
     }
 
 }
